syntax = "proto3";

option csharp_namespace = "IdentityServer.Protos";

service UserProtoService {
	rpc GetUsers(UserRequest) returns (stream UserModel);
}

message UserModel {
	string id = 1;
	string name = 2;
}

message UserRequest {
	 
}